Created using Collaboratory

--- a/Fraud_Detection_Project.ipynb
+++ b/Fraud_Detection_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZ3ZgHqGtwqd8ALFy5DIvN",
+      "authorship_tag": "ABX9TyP4Q3w+/ITEFf2GaTeDOdYH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,17 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "Importing the Libraries"
+        "# Connect to you Google Drive.\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "4RkwAwQ2z7_e"
-      }
+        "id": "w-FPP4id6pbN"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -53,7 +57,7 @@
       "source": [
         "# loading the dataset to a Pandas DataFrame\n",
         "# Important!! This path might change depending where the file is located for you!\n",
-        "#creditcard_data = pd.read_csv('/content/drive/MyDrive/CMPE 460/Fraud_Detection_ML_Project/creditcard.csv')\n",
+        "# creditcard_data = pd.read_csv('/content/drive/MyDrive/CMPE 460/Fraud_Detection_ML_Project/creditcard.csv')\n",
         "# You can use your drive as a file path as well.\n",
         "file_path = 'creditcard.csv'  # Update the file name if necessary\n",
         "\n",
